# Pop-up-controller-V10-Application

./: .gitignore  AGENTS.md  CHANGES_SINCE_LAST_RELEASE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  popup-controller.spec  pyproject.toml
.githooks/: pre-commit
.github/workflows/: release-build.yml
docs/: README.md  architecture.md  semantic-coloring.md
scripts/: build_exe.ps1  build_version.py  install_git_hooks.ps1  versioning.py
src/popup_controller/: __main__.py  app.py  config.py  main.py  manufacture_options.py
src/popup_controller/services/: build_info_service.py  controller_status_service.py  error_service.py  external_expander_service.py  firmware_release_service.py  firmware_service.py  manufacture_service.py  serial_service.py  settings_service.py  statistics_service.py  support_export_service.py  temperature_service.py  voltage_calibration_service.py
src/popup_controller/ui/: direct_controls_dialog.py  errors_dialog.py  main_window.py  (+10 more)
tests/: test_build_info_service.py  test_build_version.py  test_config.py  test_controller_status_service.py  test_dialog_layouts.py  test_error_service.py  test_external_expander_service.py  test_firmware_release_service.py  test_firmware_service.py  test_main_window.py  test_manufacture_service.py  test_remote_mapping_reference_dialog.py  test_sections.py  test_serial_service.py  test_settings_dialog.py  test_settings_service.py  test_statistics_service.py  test_support_export_service.py  test_temperature_service.py  test_voltage_calibration_dialog.py  test_voltage_calibration_service.py  test_window_helpers.py
